--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mocha": "^11.5.0",
     "webdriverio": "^9.14.0"
   },
-  "scripts": {
-    "wdio": "wdio run ./wdio.conf.js"
-  }
+"scripts": {
+  "test": "wdio run ./wdio.conf.js",
+  "wdio": "wdio run ./wdio.conf.js"
+}
 }
