--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wdio-appium",
   "type": "module",
   "devDependencies": {
+    "@wdio/allure-reporter": "^9.15.0",
     "@wdio/appium-service": "^9.14.0",
     "@wdio/cli": "^9.14.0",
     "@wdio/devtools-service": "^8.42.0",
@@ -15,8 +16,8 @@
     "mocha": "^11.5.0",
     "webdriverio": "^9.14.0"
   },
-"scripts": {
-  "test": "wdio run ./wdio.conf.js",
-  "wdio": "wdio run ./wdio.conf.js"
-}
+  "scripts": {
+    "test": "wdio run ./wdio.conf.js",
+    "wdio": "wdio run ./wdio.conf.js"
+  }
 }
